<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">My Air Buddy And I</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="action_about">About</string>
    <string name="action_acknowledgements">Acknowledgements</string>
    <string name="action_communicate">Communicate</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_help">Help</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_troubleshooting">Troubleshooting</string>
    <string name="action_waiver">Waiver</string>
    <string name="act_about">About</string>
    <string name="act_acronyms">Acronyms</string>
    <string name="act_acknowledgements">Acknowledgements</string>
    <string name="act_backup">Backup</string>
    <string name="act_bluetooth_le">Bluetooth LE Test</string>
    <string name="act_calculate_altitude">Calculate Altitude</string>
    <string name="act_calculate_boyle_law">Boyle\'s Law</string>
    <string name="act_calculate_buoyancy">Calculate Buoyancy</string>
    <string name="act_calculate_charles_law">Calculate Charles\' Law</string>
    <string name="act_calculate_current">Calculate Current</string>
    <string name="act_calculate_current_deviation">Calculate Current Deviation</string>
    <string name="act_calculate_cylinder">Calculate Cylinder</string>
    <string name="act_calculate_dalton_law">Dalton\'s Law</string>
    <string name="act_calculate_descent_ascent">Calculate Descent/Ascent</string>
    <string name="act_calculate_ead">Calculate EAD</string>
    <string name="act_calculate_end">Calculate END</string>
    <string name="act_calculate_gas">Gas Conversion</string>
    <string name="act_calculate_nitrox">Calculate Nitrox</string>
    <string name="act_calculate_pressure">Calculate Pressure</string>
    <string name="act_calculate_rmv">Calculate RMV</string>
    <string name="act_calculate_swimming_distance">Swimming Distance</string>
    <string name="act_calculate_trimix">Calculate Trimix</string>
    <string name="act_calculate_unit">Unit Conversion</string>
    <string name="act_compare_drift_dives">Compare Drift Dives</string>
    <string name="act_compare_emergency_dives">Compare Emergency Dives</string>
    <string name="act_compare_rockbottom_dives">Compare Minimum Dives</string>
    <string name="act_compare_rule_of_thirds_dives">Compare Rule of Thirds Dives</string>
    <string name="act_compare_turnaround_dives">Compare Turnaround Dives</string>
    <string name="act_computer_add">Add a dive computer</string>
    <string name="act_computer_edit">Edit</string>
    <string name="code_action_check_all">All</string>
    <string name="code_ascent_rate_deep_stop_unit">10</string>
    <string name="code_ascent_rate_safety_stop_unit">10</string>
    <string name="code_ascent_rate_surface_unit">3</string>
    <string name="code_bubble_check_depth_unit">6</string>
    <string name="code_deep_stop_dive_unit">0</string>
    <string name="code_deep_stop_percent_unit">50</string>
    <string name="code_deep_stop_time">1</string>
    <string name="code_descent_rate_unit">10</string>
    <string name="code_diameter_hose">3.2</string>
    <string name="code_end_unit">30.0</string>
    <string name="code_helium_mix" translatable="false">100.0</string>
    <string name="code_length_hose">2.0</string>
    <string name="code_min_pressure_unit">35</string>
    <string name="code_ooa_turnaround_time">1</string>
    <string name="code_oxygen_mix" translatable="false">100.0</string>
    <string name="code_rockbottom_min_pressure_unit">15</string>
    <string name="code_rockbottom_rmv_unit">1</string>
    <string name="code_rockbottom_sac_unit">35</string>
    <string name="code_safety_stop_depth_unit">5</string>
    <string name="code_safety_stop_dive_unit">6</string>
    <string name="code_safety_stop_time">3</string>
    <string name="code_scanning_timeout" translatable="false">10000</string>
    <string name="code_subtract_deep_stop_time" translatable="false">false</string>
    <string name="code_top_off_mix" translatable="false">20.9</string>
    <string name="code_turnaround_time" translatable="false">1</string>
    <string name="hdr_blending">Blending</string>
    <string name="hdr_bluetooth">Bluetooth</string>
    <string name="hdr_depths">Depths</string>
    <string name="hdr_description">Description</string>
    <string name="hdr_pressures">Pressures</string>
    <string name="hdr_rates">Rates</string>
    <string name="hdr_sac_rmv">SAC and RMV</string>
    <string name="hdr_system">System</string>
    <string name="hdr_times">Times</string>
    <string name="hdr_unit">Unit</string>
    <string name="hdr_value">Value</string>
    <string name="hint_ascent_rate_deep_stop_unit">Ascent rate to Deep Stop. Typically 10 m/min.</string>
    <string name="hint_ascent_rate_safety_stop_unit">Ascent rate to Safety Stop. Typically 10 m/min.</string>
    <string name="hint_ascent_rate_surface_unit">Ascent rate to surface. Typically 3 m/min.</string>
    <string name="hint_bubble_check_depth_unit">Depth at which Bubble Check is done (m)</string>
    <string name="hint_bubble_check_time">Time needed to do your Bubble Check in min.</string>
    <string name="hint_connecting_period">Maximum time allowed in millisecond to connect to a Bluetooth Low Energy (BLE) device. Default is 10000 ms</string>
    <string name="hint_deep_stop_dive_unit">Depth at which Deep Stop is required. Typically >= 12 m</string>
    <string name="hint_deep_stop_percent_unit">Depth at which Deep Stop is done. In percent of maximum depth</string>
    <string name="hint_deep_stop_time">Time required at your Deep Stop Depth in min.</string>
    <string name="hint_descent_rate">Descent rate. Typically 10 m/min.</string>
    <string name="hint_diameter_hose">Diameter of the filling hose. E.g. 3 mm</string>
    <string name="hint_end_unit">Equivalent Narcotic Dept to calculate Trimix best mix</string>
    <string name="hint_helium_mix">Helium mix used for partial filling. E.g. 100.0%</string>
    <string name="hint_length_hose">Length of the filling hose from the bank to the cylinder, including the whip, in meters</string>
    <string name="hint_minimum_pressure_unit">My Minimum Pressure (bar) at the end of the dive</string>
    <string name="hint_ooa_turnaround_time">Time needed to assess the Out Of Air (OOA) situation and exchange regulators</string>
    <string name="hint_oxygen_mix">Oxygen mix used for partial filling. E.g. 100.0%</string>
    <string name="hint_rockbottom_minimum_pressure_unit">Minimum pressure (bar) in emergency mode</string>
    <string name="hint_rockbottom_rmv_unit">Minimum RMV in emergency mode (l/min.)</string>
    <string name="hint_rockbottom_sac_unit">Minimum SAC in emergency mode (bar/min.)</string>
    <string name="hint_safety_stop_depth_unit">Depth at which Safety Stop is done</string>
    <string name="hint_safety_stop_dive_unit">Depth at which Safety Stop is required. Typically >= 6 m</string>
    <string name="hint_safety_stop_time">Time required at your Safety Stop Depth in min.</string>
    <string name="hint_scanning_period">Maximum time allowed in millisecond to scan and find Bluetooth Low Energy (BLE) devices. Default is 10000 ms</string>
    <string name="hint_subtract_deep_stop_time">Time spent at your Deep Stop Depth can be subtracted from your Safety Stop Time. Making a 3 min. Safety Stop a 2 minutes Safety Stop</string>
    <string name="hint_top_off_mix">Mix used to top-off cylinder after partial filling with O2. E.g. 20.9%</string>
    <string name="hint_turnaround_time">Time it takes to turn the group of divers around</string>
    <string name="lbl_ascent_rate_deep_stop_unit">Ascent Rate to Deep Stop (m/min.)</string>
    <string name="lbl_ascent_rate_safety_stop_unit">Ascent Rate to Safety Stop (m/min.)</string>
    <string name="lbl_ascent_rate_surface_unit">Ascent Rate to Surface (m/min.)</string>
    <string name="lbl_bubble_check_time">Bubble Check Time (min.)</string>
    <string name="lbl_bubble_check_depth_unit">Bubble Check Depth (m)</string>
    <string name="lbl_connection_timeout">Connection Timeout</string>
    <string name="lbl_deep_stop_dive_unit">Dive Requiring Deep Stop (m)</string>
    <string name="lbl_deep_stop_percent_unit">Deep Stop Depth (% m)</string>
    <string name="lbl_deep_stop_time">Deep Stop Time (min.)</string>
    <string name="lbl_descent_rate_unit">Descent Rate (m/min.)</string>
    <string name="lbl_diameter_hose">Diameter hose</string>
    <string name="lbl_end_unit">Equivalent Narcotic Dept (m)</string>
    <string name="lbl_helium_mix">Helium mix</string>
    <string name="lbl_length_hose">Length of hose</string>
    <string name="lbl_minimum_pressure_unit">My Minimum Pressure (bar)</string>
    <string name="lbl_ooa_turnaround_time">Out of Air Turnaround Time (min.)</string>
    <string name="lbl_oxygen_mix">Oxygen mix</string>
    <string name="lbl_rockbottom_minimum_pressure_unit">Minimum Pressure (bar)</string>
    <string name="lbl_rockbottom_rmv_unit">Minimum RMV (l/min.)</string>
    <string name="lbl_rockbottom_sac_unit">Minimum SAC (bar/min.)</string>
    <string name="lbl_safety_stop_depth_unit">Safety Stop Depth (m)</string>
    <string name="lbl_safety_stop_dive_unit">Dive Requiring Safety Stop (m)</string>
    <string name="lbl_safety_stop_time">Safety Stop Time (min.)</string>
    <string name="lbl_scanning_timeout">Scanning Timeout</string>
    <string name="lbl_subtract_deep_stop_time">Subtract Deep Stop Time from Safety Stop Time</string>
    <string name="lbl_top_off_mix">Top-off mix</string>
    <string name="lbl_turnaround_time">Turnaround Time (min.)</string>
    <string name="mn_acronyms">Acronyms</string>
    <string name="mn_altitude">Altitude</string>
    <string name="mn_backup">Backup</string>
    <string name="mn_blending_nitrox">Nitrox</string>
    <string name="mn_blending_tools">Blending Tools (Beta)</string>
    <string name="mn_blending_trimix">Trimix</string>
    <string name="mn_bluetooth_le">Bluetooth Low Energy (Test)</string>
    <string name="mn_boyle_law">Boyle\'s Law</string>
    <string name="mn_buoyancy">Buoyancy</string>
    <string name="mn_calculate_charles_law">Charles\' Law</string>
    <string name="mn_calculate_current">Current</string>
    <string name="mn_calculate_current_deviation">Current Deviation</string>
    <string name="mn_calculate_cylinder">Cylinder</string>
    <string name="mn_calculate_descent_ascent">Descent/Ascent Time</string>
    <string name="mn_calculate_ead">Equivalent Air Depth</string>
    <string name="mn_calculate_pressure">Pressure</string>
    <string name="mn_calculate_rmv">RMV</string>
    <string name="mn_calculators" >Quick Calculators</string>
    <string name="mn_constants">Constants</string>
    <string name="mn_cylinder_types">Cylinder Types</string>
    <string name="mn_dalton_law">Dalton\'s Law</string>
    <string name="mn_dive_types">Dive Types</string>
    <string name="mn_divers">Divers</string>
    <string name="mn_equipments">Equipments</string>
    <string name="mn_gas_conversion">Gas Conversion</string>
    <string name="mn_groupp_types">Group Types</string>
    <string name="mn_maintenance">Maintenance</string>
    <string name="mn_me">Me</string>
    <string name="mn_my_rmv">My RMVs"</string>
    <string name="mn_restore">Restore</string>
    <string name="mn_segment_types">Segment Types</string>
    <string name="mn_swimming_distance">Swimming Distance</string>
    <string name="mn_unit_conversion">Unit Conversion</string>
    <string name="mn_usage_types">Usage Types</string>
</resources>