<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_acronym"
        android:icon="@drawable/ic_menu_acronym"
        android:title="@string/mn_acronyms" >
    </item>
    <item
        android:id="@+id/nav_constant"
        android:icon="@drawable/ic_menu_constant"
        android:title="@string/mn_constants" >
    </item>
    <item
        android:id="@+id/nav_sac_rmv"
        android:icon="@drawable/ic_menu_sac_rmv"
        android:title="@string/mn_my_rmv" >
    </item>
    <item
        android:id="@+id/nav_bluetooth_le"
        android:icon="@drawable/ic_menu_bluetooth"
        android:visible="true"
        android:title="@string/mn_bluetooth_le" >
    </item>
    <item
        android:id="@+id/nav_vertical_tabs"
        android:icon="@drawable/ic_menu_acronym"
        android:visible="true"
        android:title="Vertical Tabs" >
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blending_tools"
            android:title="@string/mn_blending_tools"
            android:visible="true"
            app:showAsAction="never"/>
            <item
                android:id="@+id/nav_blending_nitrox"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_blending_nitrox"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_blending_trimix"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_blending_trimix"
                android:visible="false"
                app:showAsAction="never"/>
        <item
            android:id="@+id/nav_quick_calculators"
            android:title="@string/mn_calculators"
            android:visible="true"
            app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_altitude"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_altitude"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_boyle_law"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_boyle_law"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_buoyancy"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_buoyancy"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_charles_law"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_charles_law"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_current"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_current"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_current_deviation"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_current_deviation"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_cylinder"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_cylinder"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_dalton_law"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_dalton_law"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_descent_ascent"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_descent_ascent"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_ead"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_ead"
                android:visible="false"
                app:showAsAction="never"/>
<!--            <item-->
<!--                android:id="@+id/nav_calculate_end"-->
<!--                android:icon="@drawable/ic_calculator"-->
<!--                android:title="@string/mn_calculate_end"-->
<!--                android:visible="false"-->
<!--                app:showAsAction="never"/>-->
            <item
                android:id="@+id/nav_gas_conversion"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_gas_conversion"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_ata"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_pressure"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_calculate_rmv"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_calculate_rmv"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_swimming_distance"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_swimming_distance"
                android:visible="false"/>
            <item
                android:id="@+id/nav_unit_conversion"
                android:icon="@drawable/ic_calculator"
                android:title="@string/mn_unit_conversion"
                android:visible="false"
                app:showAsAction="never"/>
        <item
            android:id="@+id/nav_maintenance"
            android:title="@string/mn_maintenance"
            android:visible="true"
            app:showAsAction="never"/>
            <item
                android:id="@+id/nav_me"
                android:icon="@drawable/ic_diver"
                android:title="@string/mn_me"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_divers"
                android:icon="@drawable/ic_diver"
                android:title="@string/mn_divers"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_equipments"
                android:icon="@drawable/ic_groupp"
                android:title="@string/mn_equipments"
                android:visible="false"/>
            <item
                android:id="@+id/nav_cylinder_type"
                android:icon="@drawable/ic_cylinder"
                android:title="@string/mn_cylinder_types"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_dive_type"
                android:icon="@drawable/ic_dive"
                android:title="@string/mn_dive_types"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_groupp_type"
                android:icon="@drawable/ic_groupp"
                android:title="@string/mn_groupp_types"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_segment_type"
                android:icon="@drawable/ic_segment"
                android:title="@string/mn_segment_types"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_usage_type"
                android:icon="@drawable/ic_usage"
                android:title="@string/mn_usage_types"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_backup"
                android:title="@string/mn_backup"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_restore"
                android:icon="@drawable/ic_restore"
                android:title="@string/mn_restore"
                android:visible="false"
                app:showAsAction="never"/>
    </group>

    <!-- FIXME: Implement Communicate -->
    <!--<item android:title="@string/mn_communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_import_buddy"-->
                <!--android:title="@string/mn_import_a_buddy" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_make_me_buddy"-->
                <!--android:title="@string/mn_make_me_a_buddy" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
