<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.myairbuddyandi.MainActivity">
        <group>
        <item
            android:id="@+id/action_check_all"
            android:orderInCategory="10"
            android:title="@string/code_action_check_all"
            android:visible="false"
            android:checkable="true"
            android:checkableBehavior="all"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="20"
            android:title="@string/action_delete"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_edit"
            android:orderInCategory="30"
            android:title="@string/action_edit"
            android:visible="false"
            app:showAsAction="never" />
        </group>
        <group>
        <item
            android:orderInCategory="40"
            android:title="@string/action_communicate"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:orderInCategory="50"
            android:title="@string/action_share"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_waiver"
            android:orderInCategory="60"
            android:title="@string/action_waiver"
            android:visible="false"
            app:showAsAction=""/>
        </group>
        <group android:id="@+id/info" >
        <item
            android:id="@+id/action_acknowledgements"
            android:orderInCategory="70"
            android:title="@string/action_acknowledgements"
            android:visible="false"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_privacy_policy"
            android:orderInCategory="80"
            android:title="@string/action_privacy_policy"
            android:visible="false"
            app:showAsAction=""/>
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="90"
            android:title="@string/action_settings"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_help"
            android:orderInCategory="100"
            android:title="@string/action_help"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_troubleshooting"
            android:orderInCategory="100"
            android:title="@string/action_troubleshooting"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_contact_us"
            android:orderInCategory="110"
            android:title="@string/action_contact_us"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:orderInCategory="120"
            android:title="@string/action_about"
            app:showAsAction="never" />
        </group>
</menu>
