<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constant_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        android:layout_margin="5dp">
        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">
            <TextView
                android:id="@+id/hdrSystem"
                android:text="@string/hdr_system"
                android:gravity="center"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
            <TextView
                android:id="@+id/hdrDescription"
                android:text="@string/hdr_description"
                android:gravity="center"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            <TextView
                android:id="@+id/hdrValue"
                android:text="@string/hdr_value"
                android:gravity="center"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
            <TextView
                android:id="@+id/hdrUnit"
                android:text="@string/hdr_unit"
                android:gravity="center"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
    </androidx.cardview.widget.CardView>
</layout>